# subtitle-parser

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  subtitle_parser.py  tests.py
.github/workflows/: test.yml
