[tool.poetry]
name = "subtitle-parser"
version = "2.0.0"
description = "Parser for SRT and WebVTT subtitle files"

license = "MIT"

authors = [
    "Remi Rampin <remi@rampin.org>",
]

readme = "README.md"

repository = "https://github.com/remram44/subtitle-parser"

keywords = ["subtitle", "srt", "webvtt", "video", "text track", "subrip"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

include = [
    "tests.py", "CHANGELOG.md",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/remram44/subtitle-parser/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4"
chardet = ">=4,<6"

[tool.poetry.dev-dependencies]
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
